# FreegsNKE_MAST

./: .gitignore  CHANGELOG.md  HOW_TO_RUN.txt  LICENSE  MAST_machine_config.py  MAST_static_inverse_solve_with_divertor.py  MAST_static_inverse_solve_with_limiter.py  README.md  gatecheck.py  mast_machine_config.py  pyproject.toml  static_inverse_solve_MAST.py
configs/: coil_map.example.json  config.example.json  diagnostic_contracts.example.json
examples/01_basic_shot_download/: README.md
examples/02_window_inference/: README.md
examples/03_geometry_validation/: README.md
examples/04_full_reconstruction_no_execution/: README.md
examples/05_full_reconstruction_with_execution/: README.md
examples/06_contract_driven_scoring/: README.md
examples/07_reviewer_pack/: README.md
examples/08_robustness_v4/: README.md
examples/09_robustness_v41/: README.md
examples/10_v5_atlas/: README.md
examples/11_v6_physics_audit/: README.md
examples/12_v7_model_form/: README.md
machine_authority/: authority_manifest.json  coil_geometry.json  diagnostic_registry.json  probe_geometry.json
machine_configs/MAST/: README.md
src/mast_freegsnke/: __init__.py  availability.py  cli.py  coil_map.py  config.py  (+18 more)
templates/: forward_run.py.tpl  inverse_run.py.tpl
tests/: conftest.py  test_availability.py  test_contracts.py  test_download_patterns.py  test_freegsnke_runner.py  test_probe_geometry.py  test_robustness_v4.py  test_robustness_v41.py  test_v5_atlas.py  test_v6_physics_audit.py  test_v7_model_form.py  test_window_consensus.py  test_window_qc.py  test_windowing.py
(+33 files in other folders)
