[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mast-freegsnke-pipeline"
version = "1.1.0"
description = "MAST (MastApp) experimental data -> cache -> generated FreeGSNKE equilibrium scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
zarr = [
  "xarray>=2023.12.0",
  "fsspec>=2023.12.0",
  "zarr>=2.16.0",
  "numpy>=1.23.0",
  "pandas>=2.0.0",
]
dev = ["pytest>=7.4.0"]

[project.scripts]
mast-freegsnke = "mast_freegsnke.cli:main"
